src/test/ui/span/E0537.stderr
error[E0537]: invalid predicate `unknown`
  --> $DIR/E0537.rs:11:7
   |
11 | #[cfg(unknown())] //~ ERROR E0537
   |       ^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0537"
